--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -132,7 +132,6 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
-deny 141.147.97.190;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -219,6 +218,7 @@ deny 176.58.89.182;
 deny 176.65.138.250;
 deny 176.65.143.138;
 deny 176.97.114.202;
+deny 177.149.140.193;
 deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
@@ -236,7 +236,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 179.35.8.115;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -1130,6 +1129,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1371,7 +1371,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1403,7 +1402,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
-deny 2a0f:85c1:356:5bdd::1;
+deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:85c1:356:5f5a::1;
 deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
@@ -1500,7 +1499,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1559,6 +1557,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.128;
 deny 45.84.107.17;
@@ -1594,6 +1593,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1619,6 +1619,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 5.35.47.98;
 deny 54.36.101.21;
 deny 54.36.209.253;
 deny 54.36.209.254;
