--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -592,6 +592,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
+allow 2a0f:85c1:356:307d::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:85c1:356:5f5a::1;
