--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -872,7 +872,6 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
-deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -1401,6 +1400,7 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
+deny 2a0f:85c1:356:307d::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:85c1:356:5f5a::1;
@@ -1557,7 +1557,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.128;
 deny 45.84.107.17;
@@ -1632,6 +1631,7 @@ deny 62.182.84.146;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
+deny 65.87.7.212;
 deny 65.87.7.22;
 deny 65.87.7.47;
 deny 66.146.193.33;
