--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -592,6 +592,7 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
+deny 2a0f:85c1:356:307d::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:85c1:356:5f5a::1;
