--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -12,6 +12,7 @@ deny 103.251.167.20;
 deny 104.167.242.116;
 deny 104.167.242.117;
 deny 104.167.242.118;
+deny 104.168.144.253;
 deny 104.192.3.74;
 deny 104.219.236.100;
 deny 104.244.72.115;
@@ -76,6 +77,7 @@ deny 107.189.31.33;
 deny 107.189.4.12;
 deny 107.189.4.209;
 deny 107.189.5.121;
+deny 107.189.5.188;
 deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
@@ -205,6 +207,7 @@ deny 172.81.131.110;
 deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
+deny 172.86.109.84;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
@@ -872,6 +875,7 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -933,6 +937,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
+deny 2602:fa59:6:211::1;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1034,6 +1039,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:5501:3000:1dc::2;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
@@ -1370,6 +1376,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1499,6 +1506,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1557,6 +1565,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.128;
 deny 45.84.107.17;
