--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -99,7 +99,6 @@ allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.199.105.142;
 allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -118,7 +117,6 @@ allow 109.70.100.71;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
-allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -165,6 +163,7 @@ allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -208,7 +207,6 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 173.44.141.34;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -713,7 +711,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:b:4ef::;
 allow 2001:470:1:908::9001;
-allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -834,6 +831,7 @@ allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -868,6 +866,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -939,6 +938,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1067,7 +1067,6 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
-allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
 allow 2a02:ec0:209:10::4;
@@ -1124,7 +1123,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1533,7 +1531,6 @@ allow 45.66.35.31;
 allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
-allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
@@ -1541,6 +1538,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1563,7 +1561,6 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
-allow 46.234.47.105;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 5.104.86.6;
@@ -1640,13 +1637,13 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.56.50.166;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
@@ -1678,6 +1675,7 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
