--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -17,7 +17,6 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:b:4ef::;
 allow 2001:470:1:908::9001;
-allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -139,6 +138,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -266,7 +266,6 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
-allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
 allow 2a02:ec0:209:10::4;
@@ -323,7 +322,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
